<resources>
    <string name="app_name">Examen Resuelto</string>
    <string name="tv_nombre_text">Nombre</string>
    <string name="tv_edad_text">Edad</string>
    <string name="tv_ciudad_text">Ciudad</string>
    <string name="et_nombre_hint">Nombre hint</string>
    <string name="et_edad_hint">Edad hint</string>
    <string name="b_grabar_text">Grabar</string>
    <string name="tv_borrar_text">Borrar</string>
</resources>