<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="Persona"
            type="com.example.resuelto.Persona" />
        <variable
            name="PersonaNombre"
            type="com.example.resuelto.PersonaNombre" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ToggleButton
                    android:id="@+id/tb_encender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="88dip"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="48dp"
                    android:gravity="center_vertical"
                    android:text="@string/tv_nombre_text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="48dp"
                    android:gravity="center_vertical"
                    android:text="@string/tv_edad_text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="48dp"
                    android:gravity="center_vertical"
                    android:text="@string/tv_ciudad_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/et_nombre_hint"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColorHint="#757575"

                    android:text="@={Persona.nombre}"/>

                <EditText
                    android:id="@+id/et_edad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/et_edad_hint"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:textColorHint="#757575"
                    android:text="@{String.valueOf(Persona.edad)}"/>

                <Spinner
                    android:id="@+id/s_ciudades"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/s_ciudades_items"
                    android:minHeight="48dp"
                    />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/b_grabar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="false"
            android:text="@string/b_grabar_text"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/tv_borrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00DCFE"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/tv_borrar_text" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_datos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_persona">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>
</layout>